<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lamp_dialog_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imageLampDisconnect"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:scaleX="0.1"
        android:scaleY="0.1"
        android:alpha="0"
        android:visibility="invisible"
        tools:scaleX="1"
        tools:scaleY="1"
        tools:alpha="1"
        tools:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lamp_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorTextPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/lamp_dialog_image"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        android:text="@string/textErrorOops"
        tools:alpha="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lamp_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/lamp_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:visibility="invisible"
        android:text="@string/messageDisconnect"
        tools:alpha="1"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/lamp_dialog_pbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorTextWarning"
        android:layout_below="@+id/lamp_dialog_message"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        android:text="@string/textActionNoAndReturn"
        tools:alpha="1"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/lamp_dialog_nbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorTextPrimary"
        android:layout_below="@+id/lamp_dialog_pbutton"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        android:text="@string/tetxActionDisconnect"
        tools:alpha="1"
        tools:visibility="visible"/>

    <CheckBox
        android:id="@+id/lamp_dialog_bluetooth"
        android:text="@string/messageDisableBtDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        android:layout_below="@+id/lamp_dialog_nbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:alpha="0"
        android:visibility="invisible"
        tools:alpha="1"
        tools:visibility="visible"/>

</RelativeLayout>