<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/connect_dialog_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:progressDrawable="@drawable/ic_progressbar"
        android:maxHeight="4dp"
        android:minHeight="4dp"
        android:scaleX="0.1"
        android:visibility="invisible"
        tools:max="32"
        tools:progress="16"
        tools:scaleX="1"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/connect_dialog_image"
        android:layout_width="148dp"
        android:layout_height="148dp"
        app:srcCompat="@drawable/imageConnectError"
        android:background="@drawable/imageConnectErrorBackground"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleX="0.1"
        android:scaleY="0.1"
        android:alpha="0"
        android:visibility="invisible"
        tools:scaleX="1"
        tools:scaleY="1"
        tools:alpha="1"
        tools:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/connect_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorTextPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/connect_dialog_image"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        tools:text="@string/textErrorOops"
        tools:alpha="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/connect_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/connect_dialog_title"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        tools:text="@string/messageBtDisabled"
        tools:alpha="1"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/connect_dialog_pbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/styleDialogAccentButton"
        android:layout_below="@+id/connect_dialog_message"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        tools:text="@string/textActionBtEnable"
        tools:alpha="1"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/connect_dialog_nbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorTextAccent"
        android:layout_below="@+id/connect_dialog_pbutton"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:visibility="invisible"
        tools:text="@string/textActionNoAndExit"
        tools:alpha="1"
        tools:visibility="visible"/>

</RelativeLayout>

